week #13 (2nd class), hw5 & 6 resol, final hw

--- a/public/hw/hw-05.Rmd
+++ b/public/hw/hw-05.Rmd
@@ -62,7 +62,14 @@ Para os exercícios a seguir, utilize a mesma tabela de vida da seção anterior
 13) Calcule o prêmio mensal pago durante 15 anos para um segurado de 30 anos que deseja contratar um seguro temporário por 35 anos, com indenização de \$100.000 paga no final do mês de morte. Assuma uma taxa de juros de 3%.
 
 
-<!-- ## Resolução -->
+## Resolução
 
-<!-- Sugestão de respostas: [Resolução Lista 5](./resolucao/lista-05-resolucao.html) -->
+Sugestão de respostas:
+
+- [Resolução Lista 5](./resolucao/lista-05-resolucao.html)
+
+- [Arquivo .Rmd](./resolucao/lista-05-resolucao.Rmd)
+
+- [Resolução em pdf](./resolucao/lista-05-resolucao.pdf)
+
 
